# wigma

./: .gitignore  README.md  angular.json  package-lock.json
backend/: .env.example  Dockerfile  README.md  docker-compose.yml
backend/supabase/migrations/: 001_initial_schema.sql  002_fix_rls_policies.sql  003_add_project_data.sql  004_create_profiles_if_missing.sql  004_remove_profiles.sql  005_link_sharing.sql
backend/ws-server/: CMakeLists.txt
backend/ws-server/src/: config.cpp  config.h  main.cpp
backend/ws-server/src/auth/: jwt_verifier.cpp  jwt_verifier.h
backend/ws-server/src/persistence/: supabase_client.cpp  supabase_client.h  yjs_persistence.cpp  yjs_persistence.h
backend/ws-server/src/protocol/: message_codec.cpp  message_codec.h
backend/ws-server/src/rooms/: room.cpp  room.h  room_manager.cpp  room_manager.h
backend/ws-server/src/server/: ws_server.cpp  ws_server.h
frontend/: README.md  angular.json  package.json  tsconfig.json
frontend/src/: main.ts
frontend/src/app/: app.component.spec.ts  app.component.ts  app.routes.ts  canvas.component.html  canvas.component.ts  editor.component.ts  loader.component.ts
frontend/src/app/engine/: canvas-engine.ts
frontend/src/app/shared/: collab-protocol.ts  constants.ts
frontend/src/app/tools/: arrow-tool.ts  ellipse-tool.ts  hand-tool.ts  image-tool.ts  polygon-tool.ts  rectangle-tool.ts  scale-tool.ts  select-tool.ts  text-tool.ts  tool-manager.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
shared/types/: database.types.ts  index.ts
src/: index.html  styles.css
src/app/: app.component.html  app.component.ts  canvas.component.html  canvas.component.ts
src/app/engine/: canvas-engine.ts
src/app/shared/: constants.ts  transform-anchor.ts
src/app/shared/math/: vec2.ts
src/app/tools/: arrow-tool.ts  base-tool.ts  comment-tool.ts  ellipse-tool.ts  frame-tool.ts  image-tool.ts  line-tool.ts  pen-tool.ts  pencil-tool.ts  polygon-tool.ts  rectangle-tool.ts  section-tool.ts  select-tool.ts  slice-tool.ts  star-tool.ts  text-tool.ts  tool-manager.service.ts  video-tool.ts  zoom-tool.ts
(+166 files in other folders)
